log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-output-volume
          emptyDir: {}
      containers:
        - name: log-output-writer
          image: emanueletoma/kubernetes:log-output
          imagePullPolicy: Always
          volumeMounts:
            - name: log-output-volume
              mountPath: /data
              
        - name: log-output-reader
          image: emanueletoma/kubernetes:log-output
          imagePullPolicy: Always
          volumeMounts:
            - name: log-output-volume
              mountPath: /data
